[package]
name = "show-bytes"
version = "0.2.0"
authors = ["Tsvi Benschar"]
license = "GPL-3.0"
description = "Display bytes as printable ascii with escape sequences as needed"
homepage = "https://github.com/Benschar1/show-bytes-rs/"
documentation = "https://docs.rs/show-bytes/"
repository = "https://github.com/Benschar1/show-bytes-rs/"
readme = "README.md"
edition = "2021"

[dependencies]
